deploy/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rollouts-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
            name: my-app-stable
            port:
              number: 80
